--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,16 @@
+:root {
+    --primary: #ff0000;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-:root {
-    --primary: #ff0000;
-}
-
 body {
-    position: relative;
+    /* position: relative; */
     background-color: black;
     font-family: "Orbitron", sans-serif;
-    width: 100%;
-    min-height: 100vh;
+    height: 100%;
 }
