--- a/src/css/Mario.css
+++ b/src/css/Mario.css
@@ -1,15 +1,311 @@
 .slide-mario {
-    /* background-color: #fff; */
-    height: 100%;
+    min-height: 100vh;
     width: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-        url('../assets/bg-mario.jpeg');
-    background-size: cover; 
-    background-position: center; 
-    background-repeat: no-repeat;
-
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.banner-mario {
+    /* border: 1px solid purple; */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: 100vh;
+    flex-grow: 1;
+    /* overflow: hidden; */
+
+    /* overflow-y: scroll; */
+
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+/* O banner dentro dos slides ocupa 100% da largura, tem altura mínima de 100vh, usa layout flexível para centralizar seu conteúdo horizontal e verticalmente. */
+
+.banner-mario img {
+    position: absolute;
+    max-width: 700px;
+    transform: translateX(-50%);
+    z-index: 1;
+    top: 10%;
+    left: 50%;
+}
+
+/* As imagens dentro do banner são centralizadas horizontalmente e têm largura máxima de 700px. */
+
+.right {
+    max-height: 70vh;
+}
+
+/* Define a altura máxima de 70% da viewport para os elementos com a classe 'right'. */
+
+.banner-mario img {
+    max-width: 790px;
+    max-height: 790px;
+    width: 50%;
+    height: 50%;
+}
+
+/* As imagens no banner têm largura e altura máximas de 790px e ocupam 50% do contêiner. */
+
+.banner-mario .left {
+    /* border: 1px solid red; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-top: 110px;
+    width: 100%;
+    height: 80vh;
+}
+
+/* O conteúdo à esquerda do banner é exibido em uma coluna flexível, espaçado uniformemente. */
+
+.banner-mario .left .features {
+    max-width: 400px;
+    margin-bottom: 100px;
+}
+
+/* A seção de recursos à esquerda tem largura máxima de 400px e uma margem inferior de 100px. */
+
+.banner-mario .left .features .rating {
+    color: #ffffff;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 25px;
+}
+
+/* A seção de avaliação à esquerda tem texto branco, usa layout flexível para alinhar horizontalmente o conteúdo e tem uma margem inferior de 25px. */
+
+.banner-mario .left .features .rating .score {
+    padding: 15px;
+    font-size: 1.5rem;
+    font-weight: 400;
+    color: var(--primary);
+    background: #ffffff;
+}
+
+/* A nota de avaliação (score) tem padding de 15px, fonte grande (2rem), cor vermelha e fundo branco. */
+
+.banner-mario .left .features .content {
+    margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* O conteúdo de recursos tem uma margem à esquerda de 20px e é exibido em uma coluna flexível. */
+
+.banner-mario .left .features .pricing {
+    color: #ffffff;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+/* A seção de preços é exibida com texto branco e layout flexível para alinhamento horizontal. */
+
+.banner-mario .left .features .content h4 {
+    color: #ffffff;
+    font-size: 1.5em;
+    font-weight: 400;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+
+/* O título 'h4' dentro do conteúdo tem cor branca, tamanho de fonte 1.5em, peso de fonte 400, espaçamento entre letras de 2px e é exibido em maiúsculas. */
+
+.banner-mario .left .features .content span {
+    font-size: 1em;
+    font-weight: 600;
+    letter-spacing: 2px;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
+    text-transform: uppercase;
+}
+
+/* O texto adicional no conteúdo tem tamanho de fonte 0.7em, é exibido em maiúsculas e tem peso de fonte 400. */
+
+.banner-mario .left .features .content .subtitle {
+    color: var(--primary);
+}
+
+/* O subtítulo dentro do conteúdo de recursos tem a cor definida pela variável --primary (vermelha). */
+
+.banner-mario h1 {
+    color: #ffffff;
+    font-size: 4em;
+    letter-spacing: 5px;
+    line-height: 0.9;
+    z-index: 10;
+    text-transform: uppercase;
+    text-shadow: 5px 5px 5px rgba(0, 0, 0, 1);
+}
+
+/* O título 'h1' do banner tem cor branca, fonte grande (5em), espaçamento entre letras de 5px, altura da linha 0.9, z-index 10 e é exibido em maiúsculas. */
+
+.banner-mario .right {
+    /* border: 1px solid green; */
+    position: relative;
+    max-height: 500px;
+    /* height: 100vh; */
+    width: 450px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-end;
+    z-index: 100;
+    margin-right: 10px;
+}
+
+/* A seção à direita no banner é posicionada de forma relativa, ocupa 100vh de altura, tem largura máxima de 450px, layout em coluna e alinhamento à direita. */
+
+.banner-mario .right .description {
+    padding: 30px 60px 0 0;
+    color: #ffffff;
+}
+
+/* A descrição à direita tem padding no topo e na direita e cor branca. */
+
+.banner-mario .right .description li {
+    list-style: none;
+}
+
+/* Remove o estilo de lista dos itens de descrição à direita. */
+
+.banner-mario .right .description h4 {
+    display: inline-block;
+    font-size: 1.3em;
+    text-transform: uppercase;
+    font-weight: 400;
+    letter-spacing: 1px;
+    display: flex;
+    align-items: center;
+}
+
+/* O título 'h4' da descrição à direita tem tamanho de fonte 1.3em, maiúsculas, peso 400, espaçamento entre letras de 1px, e é exibido como bloco inline. */
+
+.banner-mario .right .description p {
+    margin: 5px 0 25px 30px;
+    font-weight: 300;
+    letter-spacing: 2px;
+}
+
+/* Os parágrafos na descrição têm margem superior de 5px e margem inferior de 25px, com peso de fonte leve (300). */
+
+.banner-mario .right h2 {
+    color: #ffffff;
+    font-size: 3.5em;
+    line-height: 1em;
+    font-weight: 400;
+    text-align: right;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+}
+
+/* O título 'h2' à direita tem cor branca, fonte grande (3.5em), linha de altura 1em, peso de fonte 400, alinhamento à direita e margem inferior de 20px, e é exibido em maiúsculas. */
+
+.banner-mario .right iframe {
+    max-width: 450px;
+    max-height: 250px;
+}
+
+/* O iframe à direita do banner tem largura máxima de 450px e altura máxima de 250px. */
+
+
+
+@media(max-width: 1300px) {
+    
+}
+
+@media(max-width: 1200px) {
+    .banner-mario img {
+        display: none;
+    }
+
+    .banner-mario h1 {
+        font-size: 3em;
+        text-align: center;
+    }
+
+    .banner-mario {
+        position: absolute;
+        top: 60px;
+        width: 100%;
+        min-height: 100vh;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    .banner-mario .left {
+        width: 90%;
+    }
+
+    .banner-mario .left .features {
+        max-width: 100%;
+        /* border: 1px solid black; */
+    }
+
+    .banner-mario .left .features .pricing {
+        justify-content: center;
+    }
+
+    .banner-mario .right {
+        width: 90%;
+        height: 100vh;
+        margin-top: 0;
+        flex-direction: row;
+    }
+
+    .banner-mario .right .description {
+        /* border: 1px solid yellow; */
+        transform: translateY(-270px);
+    }
+
+    .banner-mario .right .trailer {
+        transform: translateY(-220px);
+    }
+
+    .banner-mario .right .trailer h2 {
+        font-size: 2em;
+    }
+
+    .banner-mario .right iframe {
+        width: 350px;
+        height: 150px;
+    }
+}
+
+@media(max-width: 900px) {
+    .banner-mario .right {
+        flex-direction: column;
+        /* justify-content: center; */
+        align-items: center;
+    }
+
+    .banner-mario .right .description {
+        transform: translateY(0px);
+    }
+
+    .banner-mario .right .trailer {
+        transform: translateY(0px);
+    }
+
+}
+
+@media(max-width: 740px) {
+    .banner-mario .right .description {
+        transform: translateY(0px);
+    }
+}
+
+@media(max-width: 640px) {
+    .banner-mario .right .description {
+        transform: translateY(0px);
+    }
 }
