--- a/src/css/Slider.css
+++ b/src/css/Slider.css
@@ -1,16 +1,12 @@
 .slider-container {
-    border: 1px solid red;
-    /* background-color: gray; */
+    /* border: 1px solid red; */
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
-    overflow: hidden;
-    background-size: cover; 
-    background-position: center; 
-    background-repeat: no-repeat; 
+    /* overflow: hidden; */
   }
 
 .slider {
@@ -41,8 +37,10 @@
 
 .prev {
     left: 20px;
+    z-index: 100;
 }
 
 .next {
     right: 20px;
+    z-index: 100;
 }
