--- a/src/css/Pokemon.css
+++ b/src/css/Pokemon.css
@@ -1,13 +1,6 @@
 .slide-pokemon {
-    /* background-color: #fff; */
-    height: 100%;
+    min-height: 100vh;
     width: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-        url('../assets/bg-pokemon.jpeg');
-    background-size: cover; 
-    background-position: center; 
-    background-repeat: no-repeat;
-
     display: flex;
     flex-direction: column;
     justify-content: center;
