--- a/src/index.css
+++ b/src/index.css
@@ -13,4 +13,20 @@ body {
     background-color: black;
     font-family: "Orbitron", sans-serif;
     height: 100%;
+
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+
+body::after {
+    content: "";
+    background: rgba(0, 0, 0, 0.5);
+    pointer-events: none;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
