--- a/src/css/Pokemon.css
+++ b/src/css/Pokemon.css
@@ -5,4 +5,364 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    cursor: default;
+    user-select: none;
+}
+
+.banner-pokemon {
+    /* border: 1px solid purple; */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: 100vh;
+    flex-grow: 1;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.banner-pokemon a {
+    text-decoration: none;
+}
+
+/* O banner dentro dos slides ocupa 100% da largura, tem altura mínima de 100vh, usa layout flexível para centralizar seu conteúdo horizontal e verticalmente. */
+
+.banner-pokemon .pokemon-image {
+    position: absolute;
+    max-width: 700px;
+    transform: translateX(-50%);
+    z-index: 1;
+    top: 10%;
+    left: 50%;
+}
+
+.banner-pokemon .pokemon-gif {
+    position: absolute;
+    max-width: 100px;
+    top: 65%;
+    left: 1%;
+}
+
+/* As imagens dentro do banner são centralizadas horizontalmente e têm largura máxima de 700px. */
+
+.right {
+    max-height: 70vh;
+}
+
+/* Define a altura máxima de 70% da viewport para os elementos com a classe 'right'. */
+
+.banner-pokemon .left {
+    /* border: 1px solid red; */
+    padding-left: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-top: 110px;
+    width: 100%;
+    height: 80vh;
+    z-index: 10;
+}
+
+/* O conteúdo à esquerda do banner é exibido em uma coluna flexível, espaçado uniformemente. */
+
+.banner-pokemon .left .features {
+    max-width: 400px;
+    margin-bottom: 100px;
+}
+
+/* A seção de recursos à esquerda tem largura máxima de 400px e uma margem inferior de 100px. */
+
+.banner-pokemon .left .features .rating {
+    color: #ffffff;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 25px;
+}
+
+/* A seção de avaliação à esquerda tem texto branco, usa layout flexível para alinhar horizontalmente o conteúdo e tem uma margem inferior de 25px. */
+
+.banner-pokemon .left .features .rating .score {
+    padding: 15px;
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: var(--primary);
+    background: #ffffff;
+}
+
+/* A nota de avaliação (score) tem padding de 15px, fonte grande (2rem), cor vermelha e fundo branco. */
+
+.banner-pokemon .left .features .content {
+    margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* O conteúdo de recursos tem uma margem à esquerda de 20px e é exibido em uma coluna flexível. */
+
+.banner-pokemon .left .features .pricing {
+    color: #ffffff;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.banner-pokemon .left .features .pricing .content {
+    /* border: 1px solid blue; */
+    margin-left: 100px;
+}
+
+/* A seção de preços é exibida com texto branco e layout flexível para alinhamento horizontal. */
+
+.banner-pokemon .left .features .content h4 {
+    color: #ffffff;
+    padding: 10px 0;
+    font-size: 1.1em;
+    font-weight: 700;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+
+/* O título 'h4' dentro do conteúdo tem cor branca, tamanho de fonte 1.5em, peso de fonte 400, espaçamento entre letras de 2px e é exibido em maiúsculas. */
+
+.banner-pokemon .left .features .content span {
+    /* border: 1px solid purple; */
+    font-size: 1em;
+    font-weight: 600;
+    letter-spacing: 1px;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
+    text-transform: uppercase;
+}
+
+/* O texto adicional no conteúdo tem tamanho de fonte 0.7em, é exibido em maiúsculas e tem peso de fonte 400. */
+
+.banner-pokemon .left .features .content .subtitle {
+    color: var(--primary);
+    font-size: 1.2em;
+    font-weight: 800;
+}
+
+/* O subtítulo dentro do conteúdo de recursos tem a cor definida pela variável --primary (vermelha). */
+
+.banner-pokemon h1 {
+    color: #ffffff;
+    font-size: 2.9em;
+    letter-spacing: 3px;
+    margin-top: -50px;
+    /* line-height: 1; */
+    z-index: 10;
+    text-transform: uppercase;
+    text-shadow: 5px 5px 5px rgba(0, 0, 0, 1);
+}
+
+/* O título 'h1' do banner tem cor branca, fonte grande (5em), espaçamento entre letras de 5px, altura da linha 0.9, z-index 10 e é exibido em maiúsculas. */
+
+.banner-pokemon .right {
+    /* border: 1px solid green; */
+    position: relative;
+    max-height: 500px;
+    width: 450px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-end;
+    z-index: 100;
+    margin-right: 10px;
+}
+
+/* A seção à direita no banner é posicionada de forma relativa, ocupa 100vh de altura, tem largura máxima de 450px, layout em coluna e alinhamento à direita. */
+
+.banner-pokemon .right .description {
+    padding: 30px 60px 0 0;
+    color: #ffffff;
+}
+
+/* A descrição à direita tem padding no topo e na direita e cor branca. */
+
+.banner-pokemon .right .description li {
+    list-style: none;
+    font-size: 1.2em;
+    font-weight: 600;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.8);
+}
+
+/* Remove o estilo de lista dos itens de descrição à direita. */
+
+.banner-pokemon .right .description h4 {
+    display: inline-block;
+    font-size: 1.3em;
+    text-transform: uppercase;
+    font-weight: 400;
+    letter-spacing: 1px;
+    display: flex;
+    align-items: center;
+}
+
+/* O título 'h4' da descrição à direita tem tamanho de fonte 1.3em, maiúsculas, peso 400, espaçamento entre letras de 1px, e é exibido como bloco inline. */
+
+.banner-pokemon .right .description p {
+    margin: 5px 0 25px 30px;
+    font-weight: 300;
+    letter-spacing: 2px;
+}
+
+/* Os parágrafos na descrição têm margem superior de 5px e margem inferior de 25px, com peso de fonte leve (300). */
+
+.banner-pokemon .right h2 {
+    /* border: 1px solid red; */
+    color: #ffffff;
+    font-size: 3.5em;
+    line-height: 1em;
+    font-weight: 600;
+    text-align: end;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    text-shadow: 5px 5px 5px rgba(0, 0, 0, 1);
+}
+
+/* O título 'h2' à direita tem cor branca, fonte grande (3.5em), linha de altura 1em, peso de fonte 400, alinhamento à direita e margem inferior de 20px, e é exibido em maiúsculas. */
+
+.banner-pokemon .right iframe {
+    max-width: 450px;
+    max-height: 250px;
+}
+
+/* O iframe à direita do banner tem largura máxima de 450px e altura máxima de 250px. */
+
+
+
+@media(max-width: 1300px) {
+    .banner-pokemon .pokemon-image {
+        max-width: 600px;
+        top: 15%;
+        left: 50%;
+    }
+}
+
+@media(max-width: 1200px) {
+    .banner-pokemon .pokemon-image {
+        max-width: 150px;
+        top: 35%;
+        left: 80%;
+    }
+
+    .banner-pokemon .pokemon-gif {
+        top: 35%;
+        left: 30%;
+    }
+
+    .banner-pokemon h1 {
+        font-size: 3em;
+        text-align: center;
+        margin-top: -120px;
+    }
+
+    .banner-pokemon {
+        position: absolute;
+        top: 60px;
+        width: 100%;
+        min-height: 100vh;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    .banner-pokemon .left {
+        width: 90%;
+        margin-top: 60px;
+    }
+
+    .banner-pokemon .left .features {
+        max-width: 100%;
+        /* border: 1px solid black; */
+    }
+
+    .banner-pokemon .left .features .pricing {
+        /* border: 1px solid purple; */
+        justify-content: center;
+    }
+
+    .banner-pokemon .right {
+        /* max-height: 600px; */
+        width: 90%;
+        /* height: 100vh; */
+        margin-top: 0;
+        margin-bottom: 10px;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .banner-pokemon .right .trailer h2 {
+        font-size: 2em;
+        text-align: center;
+    }
+
+    .banner-pokemon .right iframe {
+        width: 350px;
+        height: 150px;
+    }
+}
+
+@media(max-width: 900px) {
+    .banner-pokemon .pokemon-gif {
+        top: 30%;
+        left: 25%;
+    }
+
+    .banner-pokemon .pokemon-image {
+        top: 30%;
+        left: 85%;
+    }
+
+    .banner-pokemon .right {
+        flex-direction: column;
+    }
+
+}
+
+@media(max-width: 740px) {
+    .banner-pokemon .pokemon-gif {
+        top: 29%;
+        left: 20%;
+    }
+
+    .banner-pokemon .pokemon-image {
+        display: none;
+    }
+
+}
+
+@media(max-width: 640px) {
+    .banner-pokemon .pokemon-gif {
+        top: 32%;
+        left: 20%;
+    }
+
+    .banner-pokemon h1 {
+        margin-top: -80px;
+        font-size: 2.5em;
+    }
+}
+
+@media(max-width: 550px) {
+    .banner-pokemon .pokemon-gif {
+        display: none;
+    }
+}
+
+@media(max-width: 480px) {
+    .banner-pokemon .right {
+        margin-top: 60px;
+    }
+}
+
+@media(max-width: 430px) {
+    .banner-pokemon .right {
+        margin-top: 150px;
+    }
 }
