--- a/src/css/Slider.css
+++ b/src/css/Slider.css
@@ -17,9 +17,9 @@
 }
 
 .slider-container button {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    position: fixed;
+    top: 60%;
+    /* transform: translateY(-50%); */
     background: rgba(0, 0, 0, 0.5);
     color: white;
     border: none;
@@ -35,11 +35,25 @@
 }
 
 .prev {
-    left: 20px;
+    left: 40%;
     z-index: 100;
 }
 
 .next {
-    right: 20px;
+    right: 40%;
     z-index: 100;
+}
+
+@media(max-width: 1200px) {
+    .prev, .next {
+        top: 50%!important;
+    }
+
+    .prev {
+        left: 10px;
+    }
+
+    .next {
+        right: 10px;
+    }
 }
