--- a/src/css/index.css
+++ b/src/css/index.css
@@ -17,6 +17,7 @@ body {
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    transition: background-image 1s ease-in-out;
 }
 
 
